# Portfolio

C++ Console Games/Alien vs Zombies/: CMakeLists.txt  helper.cpp  helper.h  main.cpp
C++ Console Games/Black Jack Cards/: BlackJack.cpp  jugadores.txt
C++ Console Games/Cards Heirarchy Game/: CAdmin.cpp  CAdmin.h  CCard.cpp  CCard.h  CCourseAccreditation.cpp  CCourseAccreditation.h  CFeedBackForum.cpp  CFeedBackForum.h  CIndustrialPlacement.cpp  CIndustrialPlacement.h  CMakeLists.txt  CPlagirarismHearing.cpp  CPlagirarismHearing.h  CStudent.cpp  CStudent.h  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
C++ Console Games/Game2048/: 2048 Game Report.docx  CMakeLists.txt  Game.cpp  Game.h  Game2048.cpp  Game2048.h  HallOfFame.cpp  HallOfFame.h  main.cpp
C++ Console Games/Hangman Game (C)/: main.c  utils.c
C++ Console Games/Sanke Ladder Game/: Board.cpp  Board.h  CMakeLists.txt  Cell.h  Player.cpp  Player.h  main.cpp
Java Console Games/: Main.java
Java Console Games/Bang Cards Lite/: BeerCard.java  Card.java  CatBalouCard.java  Main.java  MissedCard.java  Player.java
Java Games/: Main.java
Java Games/Bang Cards Lite/: BangCard.java  BangLiteGame.java  BarrelCard.java  DynamiteCard.java  IndiansCard.java  PrisonCard.java  StagecoachCard.java
Java Games/FlipFlop/: FlipFlopHistory.accdb  Leaderboard.txt  build.xml
Management Systems/Food Order Management System in (C)/: CMakeLists.txt  Entity.c  Meal.c  Meals.csv  Restaurant.c  Restaurants.csv  User.c  Users.csv  defaultFiles.c  foms.c  foms.h  main.c  utilities.h
Websites/Dice_Game/: index.html  (+2 more)
(+162 files in other folders)
